--- a/produ/src/main/resources/application.yml
+++ b/produ/src/main/resources/application.yml
@@ -15,13 +15,14 @@ spring:
   redis: # Redis
     cluster:
       nodes: 127.0.0.1:7001,127.0.0.1:7002,127.0.0.1:7003,127.0.0.1:7004,127.0.0.1:7005,127.0.0.1:7006
-    pool:
-      max-active: 300 # 连接池最大连接数（使用负值表示没有限制）
-      max-wait: -1 # 连接池最大阻塞等待时间（使用负值表示没有限制）
-      max-idle: 100 # 连接池中的最大空闲连接
-      min-idle: 20 # 连接池中的最小空闲连接
     database: 0 # Redis数据库索引(默认为0)
     timeout: 5000 # 连接超时时间（毫秒）
+    jedis:
+      pool:
+        max-active: 300 # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 100 # 连接池中的最大空闲连接
+        min-idle: 20 # 连接池中的最小空闲连接
 
 #集成log4j2
 logging:
