--- a/produ/src/main/resources/application.yml
+++ b/produ/src/main/resources/application.yml
@@ -23,6 +23,13 @@ spring:
         max-wait: -1 # 连接池最大阻塞等待时间（使用负值表示没有限制）
         max-idle: 100 # 连接池中的最大空闲连接
         min-idle: 20 # 连接池中的最小空闲连接
+  application:
+    name: spirng-boot-mongodb
+  data:
+    mongodb:
+      host: localhost   #同127.0.0.1
+      port: 27017
+      database: test    #指定操作的数据库
 
 #集成log4j2
 logging:
